--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,4 +76,8 @@ dependencies {
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
+
+    //Material
+    implementation 'com.google.android.material:material:1.3.0'
+
 }
