--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,4 +80,6 @@ dependencies {
     //Material
     implementation 'com.google.android.material:material:1.3.0'
 
+    implementation 'androidx.webkit:webkit:1.3.0'
+
 }
