made Article parcelable

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -49,3 +49,5 @@ kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 navigation-safeargs = { id = "androidx.navigation.safeargs.kotlin", version.ref = "nav_graph" }
 kotlin-ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 #androidx-navigation-safeargs = { group = "androidx.navigation", name = "navigation-safe-args-gradle-plugin", version.ref = "nav_graph" }
+kotlin-parcelize = { id = "org.jetbrains.kotlin.plugin.parcelize", version.ref = "kotlin" }
+
