--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,6 +17,7 @@ nav_graph = "2.8.5"
 glide = "4.16.0"
 material = "1.12.0"
 webkit = "1.9.0"
+paging3 = "3.3.5"
 
 [libraries]
 kotlinStdlib = { group = "org.jetbrains.kotlin", name = "kotlin-stdlib-jdk7", version.ref = "kotlin" }
@@ -42,12 +43,12 @@ constraintLayout = { group = "androidx.constraintlayout", name = "constraintlayo
 webkit = { group = "androidx.webkit", name = "webkit", version.ref = "webkit" }
 androidx-navigation-fragment = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "nav_graph" }
 androidx-navigation-ui = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "nav_graph" }
+androidx-paging3 = { group = "androidx.paging", name = "paging-runtime-ktx", version.ref = "paging3" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 navigation-safeargs = { id = "androidx.navigation.safeargs.kotlin", version.ref = "nav_graph" }
 kotlin-ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
-#androidx-navigation-safeargs = { group = "androidx.navigation", name = "navigation-safe-args-gradle-plugin", version.ref = "nav_graph" }
 kotlin-parcelize = { id = "org.jetbrains.kotlin.plugin.parcelize", version.ref = "kotlin" }
 
