--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,6 +18,8 @@ glide = "4.16.0"
 material = "1.12.0"
 webkit = "1.9.0"
 paging3 = "3.3.5"
+leakcanary = "2.14"
+swipeRefresh = "1.1.0"
 
 [libraries]
 kotlinStdlib = { group = "org.jetbrains.kotlin", name = "kotlin-stdlib-jdk7", version.ref = "kotlin" }
@@ -31,6 +33,12 @@ lifecycleRuntimeKtx = { group = "androidx.lifecycle", name = "lifecycle-runtime-
 roomRuntime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
 roomKtx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
 roomCompiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
+constraintLayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintLayout" }
+webkit = { group = "androidx.webkit", name = "webkit", version.ref = "webkit" }
+androidx-navigation-fragment = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "nav_graph" }
+androidx-navigation-ui = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "nav_graph" }
+androidx-paging3 = { group = "androidx.paging", name = "paging-runtime-ktx", version.ref = "paging3" }
+androidx-swipeRefresh = { group = "androidx.swiperefreshlayout", name = "swiperefreshlayout", version.ref = "swipeRefresh" }
 coroutinesCore = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "coroutines" }
 coroutinesAndroid = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-android", version.ref = "coroutines" }
 retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
@@ -39,11 +47,7 @@ loggingInterceptor = { group = "com.squareup.okhttp3", name = "logging-intercept
 glide = { group = "com.github.bumptech.glide", name = "glide", version.ref = "glide" }
 glideCompiler = { group = "com.github.bumptech.glide", name = "ksp", version.ref = "glide" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
-constraintLayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintLayout" }
-webkit = { group = "androidx.webkit", name = "webkit", version.ref = "webkit" }
-androidx-navigation-fragment = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "nav_graph" }
-androidx-navigation-ui = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "nav_graph" }
-androidx-paging3 = { group = "androidx.paging", name = "paging-runtime-ktx", version.ref = "paging3" }
+leakcanary-android = { group = "com.squareup.leakcanary", name = "leakcanary-android", version.ref = "leakcanary" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
